# fibonacci-feb-2020

./: .editorconfig  .gitignore  flask.py  pyproject.toml  readme.txt  setup.cfg  speed_data_test.csv
fibonaci/: __init__.py  build_database.py  chris_api.py  closed_form.py  config.py  connect_to_database.py  fib_api.py  fibonacci.db  fibonacci.py  fibonacci_multiple_values.py  flask.py  models.py  nieuw_bestandje.txt  speed.py  speed_data.csv
fibonaci/api/: swagger.yml
fibonaci/templates/: home.html
src/config/: prod.py  test.py
src/fibonacci/: __init__.py
src/fibonacci/models/: __init__.py
src/fibonacci/routes/: api.py  site.py
src/fibonacci/services/: __init__.py
src/fibonacci/swagger/: swagger.yml
src/fibonacci/timed Fibonacci functions/: Functions_for_speed_test.py  speed.py
src/fibonacci/timed_Fibonacci_func/: Functions_for_speed_test.py  speed.py  speed_data.csv
tests/: __init__.py  config_for_tests.py  speed_data_test.csv  test_closed_form.py  test_fib_api.py  test_fib_between_values.py  test_fib_multi_value.py  test_fibonacci.py  test_fibonaci.py  test_speed.py
tests/fibonacci/: conftest.py  test_api.py  test_closed_formula.py  test_services.py  test_speed.py
