[tool.poetry]
name = "fibonaci"
version = "0.1.0"
description = ""
authors = ["Nathan Hoogendorp <Nathan.Hoogendorp@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
