[tool.poetry]
name = "fibonaci"
version = "0.1.0"
description = ""
authors = ["Nathan Hoogendorp <Nathan.Hoogendorp@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
connexion = {extras = ["swagger-ui"], version = "^2.6.0"}
pandas = "^1.0.1"
seaborn = "^0.10.0"
matplotlib = "^3.1.3"
pytest-flask = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
